# SAT-solver

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  measure_all.sh  report.tex  run_tests.py
.github/workflows/: build-and-lint.yml
satBenchmarks/: README.md
src/: CMakeLists.txt  SATSolver.cpp  SATSolver.hpp  a.out  main.cpp  structures.hpp
tests/: uf_01.cnf  uf_02.cnf  uf_03.cnf  uf_04.cnf  uf_05.cnf  uuf_01.cnf  uuf_02.cnf  uuf_03.cnf  uuf_04.cnf  uuf_05.cnf
